--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,40 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  body {
+    @apply m-0 box-border text-slate-700;
+  }
+  #wrapper {
+    @apply flex flex-col h-screen;
+  }
+  #header {
+    @apply w-full flex justify-between;
+  }
+  #header-title {
+    @apply flex-grow text-4xl font-bold;
+  }
+  #header-content {
+    @apply flex-grow flex justify-around items-center;
+  }
+  #search-form {
+    @apply flex items-center m-2 p-2 border rounded-xl
+     border-slate-500 hover:border-slate-700 active:border-slate-700 focus-within:border-slate-700 
+     text-slate-500 hover:text-slate-700 active:text-slate-700 focus-within:text-slate-700;
+  }
+  .search-icon {
+    @apply min-w-6 min-h-6 fill-current;
+  }
+  .search-input {
+    @apply min-w-96 px-2 focus:outline-none;
+  }
+  #change-display-unit {
+    @apply w-36 flex justify-center items-center m-2 p-2 border rounded-xl
+    border-slate-500 text-slate-500 hover:border-slate-700 active:border-slate-700
+    hover:text-slate-700 active:scale-95 transition duration-200 ease-in-out;
+  }
+  #content {
+    @apply flex-grow;
+  }
+}
