--- a/src/styles.css
+++ b/src/styles.css
@@ -4,13 +4,13 @@
 
 @layer base {
   body {
-    @apply m-0 box-border text-slate-700;
+    @apply m-0 box-border text-slate-700 text-lg;
   }
   #wrapper {
     @apply flex flex-col h-screen;
   }
   #header {
-    @apply w-full flex justify-between;
+    @apply w-full flex justify-between mt-4;
   }
   #header-title {
     @apply flex-grow text-4xl font-bold;
@@ -36,5 +36,17 @@
   }
   #content {
     @apply flex-grow;
+  }
+  .hours-list-container {
+    @apply flex justify-center items-center my-16 p-6 border-t border-b border-slate-500;
+  }
+  .hours-list {
+    @apply flex flex-wrap justify-center;
+  }
+  .arrow-icon {
+    @apply w-14 fill-current text-slate-500 hover:text-slate-700 active:scale-95 transition duration-200 ease-in-out;
+  }
+  .change-or-rain-box {
+    @apply h-6 text-blue-600;
   }
 }
