--- a/src/styles.css
+++ b/src/styles.css
@@ -55,4 +55,7 @@
   .future-forecast-list-item {
     @apply w-40 flex justify-center items-center;
   }
+  .weather-info-row {
+    @apply w-full flex justify-around items-center mb-4 pb-2 border-b border-slate-500 last:border-none;
+  }
 }
