--- a/src/styles.css
+++ b/src/styles.css
@@ -10,35 +10,41 @@
     @apply flex flex-col h-screen;
   }
   #header {
-    @apply w-full flex justify-between mt-4;
+    @apply w-full flex justify-center items-center;
   }
   #header-title {
     @apply flex-grow text-4xl font-bold;
   }
   #header-content {
-    @apply flex-grow flex justify-around items-center;
+    @apply flex-grow max-w-[1600px] flex justify-between items-center mt-8 mx-16 px-6;
   }
   #search-form {
     @apply flex items-center m-2 p-2 border rounded-xl
-     border-slate-500 hover:border-slate-700 active:border-slate-700 focus-within:border-slate-700 
+    bg-slate-200 bg-opacity-50 rounded-lg
+     hover:border-slate-700 active:border-slate-700 focus-within:border-slate-700 
      text-slate-500 hover:text-slate-700 active:text-slate-700 focus-within:text-slate-700;
   }
   .search-icon {
     @apply min-w-6 min-h-6 fill-current;
   }
   .search-input {
-    @apply min-w-96 px-2 focus:outline-none;
+    @apply min-w-96 px-2 bg-slate-100 bg-opacity-50 rounded-xl focus:outline-none;
   }
   #change-display-unit {
-    @apply w-36 flex justify-center items-center m-2 p-2 border rounded-xl
-    border-slate-500 text-slate-500 hover:border-slate-700 active:border-slate-700
+    @apply w-36 flex justify-center items-center p-2 border rounded-xl
+    bg-slate-200 bg-opacity-50 rounded-lg
+     text-slate-500 hover:border-slate-700 active:border-slate-700
     hover:text-slate-700 active:scale-95 transition duration-200 ease-in-out;
   }
   #content {
     @apply flex-grow;
   }
   .hours-list-container {
-    @apply flex justify-center items-center my-16 p-6 border-t border-b border-slate-500;
+    @apply flex justify-center items-center my-16 mx-16;
+  }
+  .hours-list-content {
+    @apply max-w-[1000px] flex justify-center items-center py-12 px-6 bg-slate-200 bg-opacity-50 rounded-lg
+    2xl:max-w-[1600px];
   }
   .hours-list {
     @apply flex flex-wrap justify-center;
@@ -49,13 +55,38 @@
   .change-or-rain-box {
     @apply h-6 text-blue-600;
   }
+  .future-forecast-and-todays-weather-container {
+    @apply w-full flex flex-col 2xl:flex-row 2xl:justify-center px-16;
+  }
   .future-forecast-container {
-    @apply w-full flex justify-center items-center mb-16 pb-16 border-b border-slate-500;
+    @apply flex-grow flex justify-center items-center mb-16
+    2xl:max-w-[760px] 2xl:mr-[20px] 2xl:items-start;
+  }
+  .future-forecast-content {
+    @apply flex-grow h-[500px] max-w-[1000px] px-8 flex justify-center bg-slate-200 bg-opacity-50 rounded-lg;
+  }
+  .future-forecast-list {
+    @apply flex-grow max-w-[1000px] flex flex-col justify-center items-center;
+  }
+  .future-forecast-list-row {
+    @apply w-full flex justify-around items-center border-b border-slate-300 last:border-none;
+  }
+  .header-row {
+    @apply future-forecast-list-row mb-6 border-none;
+  }
+  .future-forecast-list-row-items {
+    @apply flex-grow flex justify-around items-center;
   }
   .future-forecast-list-item {
-    @apply w-40 flex justify-center items-center;
+    @apply w-full h-20 flex justify-center items-center;
+  }
+  .todays-weather-container {
+    @apply flex-grow flex justify-center items-center mb-16 2xl:max-w-[760px] 2xl:ml-[20px];
+  }
+  .todays-weather-content {
+    @apply flex-grow h-[500px] max-w-[1000px] flex justify-center items-center bg-slate-200 bg-opacity-50 rounded-lg;
   }
   .weather-info-row {
-    @apply w-full flex justify-around items-center mb-4 pb-2 border-b border-slate-500 last:border-none;
+    @apply flex-grow flex justify-around items-center mx-8 mb-4 pb-2 border-b border-slate-300 last:border-none;
   }
 }
