--- a/src/styles.css
+++ b/src/styles.css
@@ -54,7 +54,7 @@
     @apply flex-grow;
   }
   .weather-cummary-container {
-    @apply w-full flex flex-col items-center mt-10;
+    @apply w-full flex flex-col items-center mt-10 animate-emerge-up;
   }
   .weather-summary-content {
     @apply min-w-[400px] flex flex-col justify-center items-center py-6 box-style;
@@ -86,7 +86,7 @@
   }
   .future-forecast-container {
     @apply flex-grow flex justify-center items-center mb-16
-    2xl:max-w-[760px] 2xl:mr-[20px] 2xl:items-start;
+    2xl:max-w-[760px] 2xl:mr-[20px] 2xl:items-start animate-emerge-left;
   }
   .future-forecast-content {
     @apply flex-grow h-[450px] max-w-[1000px] px-8 flex justify-center items-center box-style;
@@ -107,7 +107,7 @@
     @apply w-full h-20 flex justify-center items-center;
   }
   .todays-weather-container {
-    @apply flex-grow flex justify-center items-center mb-16 2xl:max-w-[760px] 2xl:ml-[20px];
+    @apply flex-grow flex justify-center items-center mb-16 2xl:max-w-[760px] 2xl:ml-[20px] animate-emerge-right;
   }
   .todays-weather-content {
     @apply flex-grow h-[450px] max-w-[1000px] flex justify-center items-center box-style;
