--- a/src/styles.css
+++ b/src/styles.css
@@ -82,10 +82,10 @@
     @apply h-6 text-blue-600;
   }
   .future-forecast-and-todays-weather-container {
-    @apply w-full flex flex-col 2xl:flex-row 2xl:justify-center px-16;
+    @apply w-full flex flex-col 2xl:flex-row 2xl:justify-center px-16 mb-0;
   }
   .future-forecast-container {
-    @apply flex-grow flex justify-center items-center mb-16
+    @apply flex-grow flex justify-center items-center
     2xl:max-w-[760px] 2xl:mr-[20px] 2xl:items-start animate-emerge-left;
   }
   .future-forecast-content {
@@ -107,12 +107,24 @@
     @apply w-full h-20 flex justify-center items-center;
   }
   .todays-weather-container {
-    @apply flex-grow flex justify-center items-center mb-16 2xl:max-w-[760px] 2xl:ml-[20px] animate-emerge-right;
+    @apply flex-grow flex justify-center items-center 2xl:max-w-[760px] 2xl:ml-[20px] animate-emerge-right;
   }
   .todays-weather-content {
     @apply flex-grow h-[450px] max-w-[1000px] flex justify-center items-center box-style;
   }
   .weather-info-row {
     @apply flex-grow flex justify-around items-center mx-8 my-4 pb-2 border-b border-slate-300 last:border-none;
+  }
+  #footer {
+    @apply flex justify-center items-center;
+  }
+  .footer-content {
+    @apply flex justify-center items-center box-style py-1 px-2 mb-2;
+  }
+  .footer-text {
+    @apply pr-2;
+  }
+  .github-icon {
+    @apply w-6 fill-current text-slate-50 hover:animate-rotate-and-scale;
   }
 }
