--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,7 @@
 
 @layer base {
   body {
-    @apply m-0 box-border text-slate-50 text-xl bg-default bg-center bg-cover 2xl:bg-no-repeat;
+    @apply m-0 box-border text-slate-50 text-xl;
   }
   #wrapper {
     @apply flex flex-col h-screen;
