--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,7 @@
     @apply m-0 box-border text-slate-50 text-xl;
   }
   #wrapper {
-    @apply flex flex-col h-screen;
+    @apply p-8 w-full min-h-screen flex flex-col justify-center items-center;
   }
   .loading-icon {
     @apply relative top-[-150px] w-20 h-20 fill-current animate-spin;
@@ -31,7 +31,7 @@
     @apply flex-grow text-4xl font-bold;
   }
   #header-content {
-    @apply flex-grow max-w-[1600px] flex justify-between items-center mt-8 mx-16 px-6;
+    @apply flex-grow max-w-[1600px] flex flex-col lg:flex-row justify-between items-center;
   }
   #search-form {
     @apply flex items-center m-2 px-2 box-style border
@@ -51,20 +51,22 @@
     active:border-slate-700 active-effect transition-effect;
   }
   #content {
-    @apply flex-grow;
+    @apply flex-grow max-w-[2000px] flex justify-center items-center;
   }
-  .weather-cummary-container {
-    @apply w-full flex flex-col items-center mt-10 animate-emerge-up;
+  #main-content {
+    @apply flex-grow flex flex-col items-center;
+  }
+  .weather-summary-container {
+    @apply w-full flex flex-col items-center mt-8 animate-emerge-up;
   }
   .weather-summary-content {
     @apply min-w-[400px] flex flex-col justify-center items-center py-6 box-style;
   }
   .hours-list-container {
-    @apply flex justify-center items-center my-8 mx-16;
+    @apply flex justify-center items-center my-4;
   }
   .hours-list-content {
-    @apply max-w-[1000px] flex justify-center items-center py-12 px-6 box-style
-    2xl:max-w-[1600px];
+    @apply flex justify-center items-center py-12 px-6 box-style;
   }
   .hours-list {
     @apply flex flex-wrap justify-center;
@@ -82,17 +84,16 @@
     @apply h-6 text-blue-600;
   }
   .future-forecast-and-todays-weather-container {
-    @apply w-full flex flex-col 2xl:flex-row 2xl:justify-center px-16 mb-0;
+    @apply w-full flex flex-col xl:flex-row xl:justify-center mb-4 gap-4;
   }
   .future-forecast-container {
-    @apply flex-grow flex justify-center items-center
-    2xl:max-w-[760px] 2xl:mr-[20px] 2xl:items-start animate-emerge-left;
+    @apply flex-grow flex justify-center items-center xl:items-start animate-emerge-left;
   }
   .future-forecast-content {
-    @apply flex-grow h-[450px] max-w-[1000px] px-8 flex justify-center items-center box-style;
+    @apply flex-grow h-full px-8 flex justify-center items-center box-style;
   }
   .future-forecast-list {
-    @apply flex-grow max-w-[1000px] flex flex-col justify-center items-center;
+    @apply flex-grow flex flex-col justify-center items-center;
   }
   .future-forecast-list-row {
     @apply w-full flex justify-around items-center border-b border-slate-300 last:border-none;
@@ -107,10 +108,10 @@
     @apply w-full h-20 flex justify-center items-center;
   }
   .todays-weather-container {
-    @apply flex-grow flex justify-center items-center 2xl:max-w-[760px] 2xl:ml-[20px] animate-emerge-right;
+    @apply flex-grow flex justify-center items-center animate-emerge-right;
   }
   .todays-weather-content {
-    @apply flex-grow h-[450px] max-w-[1000px] flex justify-center items-center box-style;
+    @apply flex-grow h-full flex justify-center items-center box-style;
   }
   .weather-info-row {
     @apply flex-grow flex justify-around items-center mx-8 my-4 pb-2 border-b border-slate-300 last:border-none;
