--- a/src/styles.css
+++ b/src/styles.css
@@ -60,7 +60,7 @@
     @apply w-full flex flex-col items-center mt-8 animate-emerge-up;
   }
   .weather-summary-content {
-    @apply w-full flex-grow min-w-[400px] flex flex-col justify-center items-center py-6 box-style;
+    @apply w-full flex-grow flex flex-col justify-center items-center py-4 sm:py-6 box-style;
   }
   #next-24-hours-forecast {
     @apply w-full flex justify-center items-center;
