--- a/src/styles.css
+++ b/src/styles.css
@@ -93,7 +93,7 @@
     @apply flex-grow flex justify-center items-center xl:items-start animate-emerge-left;
   }
   .future-forecast-content {
-    @apply flex-grow h-full px-8 flex justify-center items-center box-style;
+    @apply flex-grow h-full px-2 sm:px-4 xl:px-8 flex justify-center items-center box-style;
   }
   .future-forecast-list {
     @apply flex-grow flex flex-col justify-center items-center;
@@ -102,13 +102,13 @@
     @apply w-full flex justify-around items-center border-b border-slate-300 last:border-none;
   }
   .header-row {
-    @apply future-forecast-list-row mb-6 border-none;
+    @apply future-forecast-list-row my-2 border-none;
   }
   .future-forecast-list-row-items {
     @apply flex-grow flex justify-around items-center;
   }
   .future-forecast-list-item {
-    @apply w-full h-20 flex justify-center items-center;
+    @apply w-full my-1 sm:my-2 xl:my-4 flex justify-center items-center text-sm sm:text-lg xl:text-xl;
   }
   .todays-weather-container {
     @apply flex-grow flex justify-center items-center animate-emerge-right;
