--- a/src/styles.css
+++ b/src/styles.css
@@ -114,10 +114,10 @@
     @apply flex-grow flex justify-center items-center animate-emerge-right text-sm sm:text-lg xl:text-xl;
   }
   .todays-weather-content {
-    @apply flex-grow h-full flex justify-center items-center box-style;
+    @apply flex-grow h-full px-2 sm:px-4 xl:px-8 flex justify-center items-center box-style;
   }
   .weather-info-row {
-    @apply flex-grow flex justify-around items-center mx-8 my-4 pb-2 border-b border-slate-300 last:border-none;
+    @apply flex-grow flex justify-around items-center my-2 sm:my-4 pb-2 border-b border-slate-300 last:border-none;
   }
   #footer {
     @apply flex justify-center items-center;
