--- a/src/styles.css
+++ b/src/styles.css
@@ -123,7 +123,7 @@
     @apply w-full flex justify-center items-center;
   }
   .footer-content {
-    @apply w-full flex justify-center items-center box-style p-1;
+    @apply w-full max-w-[1600px] flex justify-center items-center box-style p-1;
   }
   .footer-text {
     @apply pr-2 text-sm sm:text-lg xl:text-xl;
